# gamutRF

./: .dockerignore  .env  .gitignore  .semgrepignore  BUILD.md  Dockerfile  Dockerfile.airspyfm  Dockerfile.api  Dockerfile.base  Dockerfile.builder  Dockerfile.compass  Dockerfile.freqxlator  Dockerfile.gnuradio  Dockerfile.gnuradio-deps  Dockerfile.graph  Dockerfile.mqtt  Dockerfile.rssi  Dockerfile.samples2raw  Dockerfile.sigfinder  Dockerfile.specgram  LICENSE  README-airt.md  README.md  SECURITY.md  compass-requirements.txt  docker-compose-monitoring.yml  docker-compose-orcestrator.yml  docker-compose-orchestrator.yml  docker-compose-specgram.yml  docker-compose-worker.yml  docker-compose.yml  ettus_scan.grc  ettus_scan.py  freespacer.yml  install.sh  monitoring.yml  orchestrator.yml  prometheus.yml  pyproject.toml  renovate.json  (+17 more)
.github/workflows/: ci-test.yml  codeql-analysis.yml  docker-api.yml  docker-extras.yml  docker-test.yml  docker.yml  pypi.yml  secrets-scan.yml  semgrep.yml  test.yml
.github/workflows/config/: semgrep-dockerfile.yml  semgrep-python.yml  whispers-config.yml
augment/: augment.py
auto_label/: auto_label.py
docker/: Dockerfile.airspyfm  Dockerfile.base  Dockerfile.cuda-torchserve  Dockerfile.driver  Dockerfile.gnuradio  Dockerfile.gnuradio-deps  Dockerfile.mqtt  Dockerfile.orin-torchserve  Dockerfile.sigmf  Dockerfile.test  Dockerfile.torchserve  Dockerfile.torchsig  Dockerfile.uhd-sr  Dockerfile.vkfft  Dockerfile.waterfall  README.md  freespacer.yml  prometheus.yml  pytorch-patch.txt  torchserve-patch.txt
docs/: 1-INTRODUCTION.md  2-SYSTEM_OVERVIEW.md  3-BUILD.md  4-OPERATION.md  5-ML_TOOLING.md  6-TESTING.md  7-TROUBLESHOOTING.md  8-DEVELOPMENT.md  BUILD.md  README-airt.md
gamutrf/: __init__.py  __main__.py  api.py  birds_eye_rssi.py  birdseye_rssi.py  compass.py  compress_dirs.py  dc_spike.py  ettus_scan.py  ettus_source.py  flask_handler.py  freqxlator.py  grinference2mqtt.py  grinferenceoutput.py  grpduzmq.py  grscan.py  grsource.py  grterminal_sink.py  gryolo.py  mqtt_reporter.py  offline.py  record.py  sample_reader.py  samples2raw.py  scan.py  scan2mp4.py  scan2rtlpow.py  scanhc.sh  sdr_recorder.py  sigfinder.py  sigwindows.py  soapy_source.py  specgram.py  utils.py  waterfall.py  waterfall_samples.py  worker.py  yolo_notes.md  zmqreceiver.py
gamutrf-ml/: extractSpectrograms.py  label.py  polygon_2_rectangle_yolo.py  train.py  viz_rf_bb.ipynb
gamutrf-stl/: README.md  base_feet.stl  fan_holder.stl  scaffold.stl
gamutrf-stl/V1/: pi4_holder.stl
gamutrflib/: pyproject.toml
gamutrflib/gamutrflib/: peak_finder.py  zmqbucket.py
gamutrfwaterfall/: pyproject.toml
gamutrfwaterfall/gamutrfwaterfall/: argparser.py  flask_handler.py  waterfall.py  waterfall_plot.py
gamutrfwaterfall/gamutrfwaterfall/static/styles/: gamutrf.css
gamutrfwaterfall/gamutrfwaterfall/templates/: base.html  predictions.html  waterfall.html
gamutrfwaterfall/tests/: test_waterfall.py
static/: console_script.js  console_style.css
stl-files/V1/: scaffold.stl
stl-files/pinephone/: B200-PhoneCase-TopCap-V2.STL  B200-PhoneCase-TopCap.STL  B200-PhoneCase.STL  pinephone_case_-_V2.stl
templates/: scanner_console.html  scanner_form.html
tests/: requirements.txt  test-requirements.txt  test_api.py  test_birdseye_rssi.py  test_compass.py  test_compress_dirs.py  test_flask_handler.py  test_freqxlator.py  test_grscan.py  test_image_torchserve.sh  test_main.py  test_mqtt_reporter.py  test_offline.sh  test_offline_consistent.sh  test_sample_reader.py  test_samples2raw.py  test_scan.py  test_scan2mp4.py  test_scan2rtlpow.py  test_sdr_recorder.py  test_sigfinder.py  test_sigwindows.py  test_specgram.py  test_torchserve.sh  test_utils.py  test_waterfall.py
tests/data/: scan.csv
torchserve/: config.properties  custom_handler.py  install-orin-torchserve.sh  install-torchserve.sh  torchserve-entrypoint.sh
torchserve/image/: custom_handler.py  model_config.json
utils/mavlink-api/: Dockerfile  Dockerfile.mavlink-api  Dockerfile.mqtt-publisher  README.md  docker-compose.yaml  mavlink-api.py  mavlink-api.yaml  mqtt-publisher.py  pyproject.toml
utils/mavlink-api/utils/: gps-test.py  mavlink_serial_test.py
waterfall/: pyproject.toml
waterfall/tests/: test_waterfall.py
waterfall/waterfall/: waterfall.py
zmqbucket/: pyproject.toml
