[tool.poetry]
name = "gamutrf"
version = "0.5.72"
description = "An orchestrated SDR scanner"
authors = ["cglewis <clewis@iqt.org>"]
license = "Apache-2.0"
readme = "README.md"
packages = [
    { include = "gamutrf" },
]

[tool.poetry.dependencies]
Flask = "3.1.0"
Jinja2 = "3.1.6"
bjoern = "3.2.2"
falcon = "4.0.2"
falcon-cors = "1.1.7"
gpsd-py3 = "0.3.0"
numpy = "2.2.3"
paho-mqtt = "2.1.0"
pandas = "2.2.3"
pbr = "6.1.1"
prometheus_client = "0.21.1"
python = ">=3.10,<3.13"
pyzmq = "26.2.1"
requests = "2.32.3"
sigmf = "1.2.6"
sysrsync = "1.1.1"
webcolors = "24.11.1"
zstandard = "0.23.0"
scipy = "1.15.2"

[tool.poetry.dev-dependencies]
attr = "0.3.2"
attrs = "25.1.0"
black = "25.1.0"
docker = "7.1.0"
pdbpp = "^0.10.3"
pylint = "3.3.4"
pytest = "8.3.5"
pytest-cov = "6.0.0"
pytype = "2024.10.11"

[tool.poetry.scripts]
gamutrf-compress_dirs = 'gamutrf.__main__:compress_dirs'
gamutrf-offline= 'gamutrf.__main__:offline'
gamutrf-scan = 'gamutrf.__main__:scan'
gamutrf-worker = 'gamutrf.__main__:worker'

[tool.poetry.urls]
homepage = "https://github.com/IQTLabs/gamutRF"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
