[metadata]
name = gamutrf
summary = An orchestrated SDR scanner
license = Apache-2
author = cglewis
author-email = clewis@iqt.org
home-page = https://github.com/IQTLabs/gamutRF
platform = any
classifier =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python

[entry_points]
console_scripts =
    gamutrf-api = gamutrf.__main__:api

[pytype]
inputs = gamutrf
