[tool.poetry]
name = "gamutrflib"
version = "0.5.72"
description = "gamutrf non-gnuradio common code"
authors = ["cglewis <clewis@iqt.org>"]
license = "Apache-2.0"
packages = [
    { include = "gamutrflib" },
]

[tool.poetry.dependencies]
numpy = "2.2.6"
scipy = "1.15.3"
pandas = "2.3.0"
python = ">=3.11,<3.13"
pyzmq = "27.0.0"
zstandard = "0.23.0"

[tool.poetry.urls]
homepage = "https://github.com/IQTLabs/gamutRF"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
