[tool.poetry]
name = "gamutrfwaterfall"
version = "0.5.72"
description = "An orchestrated SDR scanner"
authors = ["cglewis <clewis@iqt.org>"]
license = "Apache-2.0"
packages = [
    { include = "gamutrfwaterfall" },
]

[tool.poetry.dependencies]
Flask = "3.0.3"
cairocffi = "1.7.1"
matplotlib = "3.9.2"
numpy = "2.1.1"
pandas = "2.2.2"
pycairo = "1.27.0"
python = ">=3.10,<3.13"
pyzmq = "26.2.0"
scipy = "1.14.1"
zstandard = "0.23.0"
requests = "2.32.3"

[tool.poetry.scripts]
gamutrf-waterfall = 'gamutrfwaterfall.waterfall:main'

[tool.poetry.urls]
homepage = "https://github.com/IQTLabs/gamutRF"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
