[tool.poetry]
name = "gamutrfwaterfall"
version = "0.5.72"
description = "An orchestrated SDR scanner"
authors = ["cglewis <clewis@iqt.org>"]
license = "Apache-2.0"
packages = [
    { include = "gamutrfwaterfall" },
]

[tool.poetry.dependencies]
Flask = "3.1.1"
cairocffi = "1.7.1"
matplotlib = "3.10.3"
numpy = "2.2.6"
pandas = "2.3.0"
pycairo = "1.28.0"
python = ">=3.10,<3.13"
pyzmq = "26.4.0"
scipy = "1.15.3"
zstandard = "0.23.0"
requests = "2.32.4"

[tool.poetry.scripts]
gamutrf-waterfall = 'gamutrfwaterfall.waterfall:main'

[tool.poetry.urls]
homepage = "https://github.com/IQTLabs/gamutRF"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
