[tool.poetry]
name = "mavlink-api"
version = "0.1.0"
description = ""
authors = ["lk-iqt <112730501+lk-iqt@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^3.0.0"
pymavlink = "^2.4.40"
pyserial = "^3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
