[tool.poetry]
name = "mavlink-api"
version = "0.1.0"
description = ""
authors = ["lk-iqt <112730501+lk-iqt@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
Flask = "^3.1.1"
pymavlink = "^2.4.40"
pyserial = "^3.5"
httpx = "0.28.1"
paho-mqtt = "^2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
